@@ -1,0 +1,35 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass-rails/sass-rails-4.0.1.ebuild,v 1.1 2013/10/16 05:57:43 graaff Exp $
+
+EAPI=5
+USE_RUBY="ruby19"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_EXTRADOC="CHANGELOG.md README.md"
+
+inherit ruby-fakegem versionator
+
+DESCRIPTION="Official Ruby-on-Rails Integration with Sass"
+HOMEPAGE="https://github.com/rails/sass-rails"
+
+LICENSE="MIT"
+SLOT="$(get_version_component_range 1-2)"
+KEYWORDS="~amd64 ~arm"
+
+IUSE=""
+
+# Restrict tests for now since it is hard to set up the right
+# environment with the correct ruby interpreter and Rails test
+# application.
+RESTRICT="test"
+
+#ruby_add_bdepend "test? ( dev-ruby/sfl dev-ruby/bundler )"
+
+ruby_add_rdepend ">=dev-ruby/sass-3.1.10
+	=dev-ruby/railties-4*
+	>=dev-ruby/sprockets-rails-2.0.0:2.0"
+
+each_ruby_test() {
+	${RUBY} -S bundle exec rake test || die
+}
