@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/sass-3.1.10[ruby_targets_ruby19] =dev-ruby/railties-4*[ruby_targets_ruby19] >=dev-ruby/sprockets-rails-2.0.0:2.0[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
+DESCRIPTION=Official Ruby-on-Rails Integration with Sass
+EAPI=5
+HOMEPAGE=https://github.com/rails/sass-rails
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 test test
+KEYWORDS=~amd64 ~arm
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/sass-3.1.10[ruby_targets_ruby19] =dev-ruby/railties-4*[ruby_targets_ruby19] >=dev-ruby/sprockets-rails-2.0.0:2.0[ruby_targets_ruby19] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 )
+RESTRICT=test
+SLOT=4.0
+SRC_URI=mirror://rubygems/sass-rails-4.0.1.gem
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=b6d2ab0deaf8ef77f3b3fdbb5545ea1d
